tools/syntax_stubs.h

int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
void free(void *p);
void *memcpy(void *d, const void *s, unsigned long n);
void *memset(void *s, int c, unsigned long n);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
typedef int64_t off_t;
#define _(s) (s)
#define zcmp(a,b) strcmp((a),(b))
#define NO_MORE_DATA (-256)
#define SAVED_SIZE 80
#define COLORSPEC_TYPE_NONE 0
#define CONTEXT_COMMENT 1
#define CONTEXT_STRING 2
#define CONTEXT_MASK (CONTEXT_COMMENT+CONTEXT_STRING)
#define INVERSE           64
#define UNDERLINE        128
#define BOLD             256
#define BLINK            512
#define DIM             1024
#define DOUBLE_UNDERLINE   8
#define CROSSED_OUT       16
#define AT_MASK (INVERSE+UNDERLINE+BOLD+BLINK+DIM+32+DOUBLE_UNDERLINE+CROSSED_OUT)
#define BG_SHIFT 11
#define BG_VALUE (255<<BG_SHIFT)
#define BG_NOT_DEFAULT (256<<BG_SHIFT)
#define BG_TRUECOLOR (512<<BG_SHIFT)
#define BG_MASK (1023<<BG_SHIFT)
#define FG_SHIFT 21
#define FG_VALUE (255<<FG_SHIFT)
#define FG_NOT_DEFAULT (256<<FG_SHIFT)
#define FG_TRUECOLOR (512<<FG_SHIFT)
#define FG_MASK (1023<<FG_SHIFT)
/* high_cmd bitfield flags (ABI-compatible with unsigned bitfields) */
#define CMD_F_NOEAT            (1u<<0)
#define CMD_F_START_BUFFERING  (1u<<1)
#define CMD_F_STOP_BUFFERING   (1u<<2)
#define CMD_F_SAVE_C           (1u<<3)
#define CMD_F_SAVE_S           (1u<<4)
#define CMD_F_PUSH_C           (1u<<5)
#define CMD_F_PUSH_S           (1u<<6)
#define CMD_F_POP_C            (1u<<7)
#define CMD_F_POP_S            (1u<<8)
#define CMD_F_IGNORE           (1u<<9)
#define CMD_F_START_MARK       (1u<<10)
#define CMD_F_STOP_MARK        (1u<<11)
#define CMD_F_RECOLOR_MARK     (1u<<12)
#define CMD_F_RTN              (1u<<13)
#define CMD_F_RESET            (1u<<14)
extern char i_msg[];
void internal_msg(const char *s);
void setlogerrs(void);
#define logerror_2(fmt,a,b) (snprintf((i_msg),128,(fmt),(a),(b)), internal_msg(i_msg), setlogerrs())
#define logmessage_3(fmt,a,b,c) (snprintf((i_msg),128,(fmt),(a),(b),(c)), internal_msg(i_msg))