src/syntax.zig

//! Syntax highlighting DFA interpreter — replaces `joe/syntax.c`.
//!
//! Faithful C-ABI port of JOE's .jsf parser + DFA engine.
//! Generated from a goto-free / bitfield-free rewrite of syntax.c via
//! `zig translate-c`, then cleaned for the hybrid Zig+C build.

const std = @import("std");
const ptrdiff_t = c_long;
pub const off_t = i64;


pub const NO_MORE_DATA = -@as(c_int, 256);
pub const SAVED_SIZE = @as(c_int, 80);
pub const COLORSPEC_TYPE_NONE = @as(c_int, 0);
pub const CONTEXT_COMMENT = @as(c_int, 1);
pub const CONTEXT_STRING = @as(c_int, 2);
pub const CONTEXT_MASK = CONTEXT_COMMENT + CONTEXT_STRING;
pub const INVERSE = @as(c_int, 64);
pub const UNDERLINE = @as(c_int, 128);
pub const BOLD = @as(c_int, 256);
pub const BLINK = @as(c_int, 512);
pub const DIM = @as(c_int, 1024);
pub const DOUBLE_UNDERLINE = @as(c_int, 8);
pub const CROSSED_OUT = @as(c_int, 16);
pub const AT_MASK = ((((((INVERSE + UNDERLINE) + BOLD) + BLINK) + DIM) + @as(c_int, 32)) + DOUBLE_UNDERLINE) + CROSSED_OUT;
pub const BG_SHIFT = @as(c_int, 11);
pub const BG_VALUE = @as(c_int, 255) << BG_SHIFT;
pub const BG_NOT_DEFAULT = @as(c_int, 256) << BG_SHIFT;
pub const BG_TRUECOLOR = @as(c_int, 512) << BG_SHIFT;
pub const BG_MASK = @as(c_int, 1023) << BG_SHIFT;
pub const FG_SHIFT = @as(c_int, 21);
pub const FG_VALUE = @as(c_int, 255) << FG_SHIFT;
pub const FG_NOT_DEFAULT = @as(c_int, 256) << FG_SHIFT;
pub const FG_TRUECOLOR = @as(c_int, 512) << FG_SHIFT;
pub const FG_MASK = @as(c_int, 1023) << FG_SHIFT;
pub const CMD_F_NOEAT = @as(c_uint, 1) << @as(c_int, 0);
pub const CMD_F_START_BUFFERING = @as(c_uint, 1) << @as(c_int, 1);
pub const CMD_F_STOP_BUFFERING = @as(c_uint, 1) << @as(c_int, 2);
pub const CMD_F_SAVE_C = @as(c_uint, 1) << @as(c_int, 3);
pub const CMD_F_SAVE_S = @as(c_uint, 1) << @as(c_int, 4);
pub const CMD_F_PUSH_C = @as(c_uint, 1) << @as(c_int, 5);
pub const CMD_F_PUSH_S = @as(c_uint, 1) << @as(c_int, 6);
pub const CMD_F_POP_C = @as(c_uint, 1) << @as(c_int, 7);
pub const CMD_F_POP_S = @as(c_uint, 1) << @as(c_int, 8);
pub const CMD_F_IGNORE = @as(c_uint, 1) << @as(c_int, 9);
pub const CMD_F_START_MARK = @as(c_uint, 1) << @as(c_int, 10);
pub const CMD_F_STOP_MARK = @as(c_uint, 1) << @as(c_int, 11);
pub const CMD_F_RECOLOR_MARK = @as(c_uint, 1) << @as(c_int, 12);
pub const CMD_F_RTN = @as(c_uint, 1) << @as(c_int, 13);
pub const CMD_F_RESET = @as(c_uint, 1) << @as(c_int, 14);
pub const IDLE = @as(c_int, 0);
pub const AFTER_ESC = @as(c_int, 1);
pub const AFTER_BRACK = @as(c_int, 2);
pub const IN_NUMBER = @as(c_int, 3);

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn free(p: ?*anyopaque) void;


pub inline fn logerror_2(fmt: anytype, a: anytype, b: anytype) @TypeOf(setlogerrs()) {
    _ = snprintf(i_msg, @as(c_int, 128), fmt, a, b);
    _ = internal_msg(i_msg);
    return setlogerrs();
}
pub inline fn logmessage_3(fmt: anytype, a: anytype, b: anytype, c: anytype) void {
    _ = snprintf(i_msg, @as(c_int, 128), fmt, a, b, c);
    _ = internal_msg(i_msg);
}
pub inline fn zcmp(a: anytype, b: anytype) @TypeOf(strcmp(a, b)) {
    return strcmp(a, b);
}
